# MIT-Maker-Portfolio

./: README.md
compiler/: Cargo.toml  build.rs  narwhal.ungram
compiler/examples/: foo.nw  main.nw
compiler/examples/std/: io.nw
compiler/src/: cir.rs  diagnostic.rs  index.rs  lib.rs  main.rs  parser.rs  syntax.rs
compiler/src/cir/: construct.rs  nodes.rs  resolve.rs  types.rs
compiler/src/diagnostic/: format.rs  location.rs
compiler/src/index/: source.rs
compiler/src/parser/: grammar.rs  tests.rs
compiler/src/parser/snapshots/: narwhal__parser__tests__block#0.snap  narwhal__parser__tests__block#1.snap  narwhal__parser__tests__constant#0.snap  narwhal__parser__tests__constant#1.snap  narwhal__parser__tests__expr#0.snap  narwhal__parser__tests__expr#1.snap  narwhal__parser__tests__expr#10.snap  narwhal__parser__tests__expr#11.snap  narwhal__parser__tests__expr#12.snap  narwhal__parser__tests__expr#13.snap  narwhal__parser__tests__expr#14.snap  narwhal__parser__tests__expr#15.snap  narwhal__parser__tests__expr#16.snap  narwhal__parser__tests__expr#17.snap  narwhal__parser__tests__expr#18.snap  narwhal__parser__tests__expr#19.snap  narwhal__parser__tests__expr#2.snap  narwhal__parser__tests__expr#20.snap  narwhal__parser__tests__expr#21.snap  narwhal__parser__tests__expr#22.snap  narwhal__parser__tests__expr#23.snap  narwhal__parser__tests__expr#24.snap  narwhal__parser__tests__expr#25.snap  narwhal__parser__tests__expr#26.snap  narwhal__parser__tests__expr#27.snap  narwhal__parser__tests__expr#28.snap  (+39 more)
compiler/src/syntax/: generated.rs
(+163 files in other folders)
