[package]
name = "narwhal"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8.11"
cranelift-entity = "0.113.0"
cstree = { version = "0.12.1", features = ["derive", "lasso_compat", "multi_threaded_interning"] }
logos = "0.14.2"
ordered-float = "4.3.0"
yansi = { version = "1.0.1", features = ["detect-env", "detect-tty"] }

[build-dependencies]
prettyplease = "0.2.22"
proc-macro2 = "1.0.86"
quote = "1.0.37"
syn = { version = "2.0.79", default-features = false, features = ["parsing"] }
ungrammar = "1.16.1"

[dev-dependencies]
insta = "1.40.0"
